# Critter-Cove-Zoo-Manager

./: .gitignore  Cargo.toml  README.md  bacon.toml
.github/workflows/: ci.yml
src/: assets.rs  components.rs  events.rs  main.rs  plugins.rs  queries.rs  resources.rs  systems.rs
src/assets/: animal.rs  images.rs  sounds.rs
src/assets/images/: animal.rs  animal_sprites.rs  animals.rs  user_interface.rs  world.rs  zoo_animal.rs
src/assets/sounds/: game_music.rs  music.rs
src/components/: animal.rs  animation_timer.rs  constants.rs  fence.rs  game_states.rs  menu.rs  music.rs  path.rs  rock.rs  terrain.rs  tree.rs  user_interface.rs  world_path.rs
src/events/: despawn_entity_event.rs  event_handlers.rs  spawn_animated_sprite_event.rs  spawn_sound_event.rs  spawn_sprite_event.rs
src/events/event_handlers/: despawn_entity.rs  despawn_entity_event_handler.rs  spawn_animated_sprite.rs  spawn_animated_sprite_event_handler.rs  spawn_sound.rs  spawn_sprite.rs  (+2 more)
src/plugins/: event_handlers.rs  events.rs  game_resources.rs  game_running.rs  game_start.rs  resources.rs  running.rs  start.rs  states.rs  user_interface.rs
src/queries/: animal_queries.rs  animation_queries.rs  camera_queries.rs  menu_queries.rs  music_queries.rs  user_interface_queries.rs
src/resources/: camera_settings.rs  music_timer.rs  selected_item.rs  tile_size.rs
src/systems/: animal_movement.rs  animate_boar.rs  animate_sprites.rs  camera.rs  play_music.rs  spawn_animal.rs  spawn_boar.rs  spawn_rock.rs  spawn_terrain.rs  spawn_tree.rs  spawn_user_interface.rs  spawning.rs  user_interface.rs
(+82 files in other folders)
