[package]
name = "critter-cove-zoo-manager"
version = "0.8.2"
authors = ["Skippy <steelstone3@gmail.com>"]
edition = "2021"
homepage = "https://github.com/Steelstone3/Critter-Cove-Zoo-Manager"
repository = "https://github.com/Steelstone3/Critter-Cove-Zoo-Manager"
license = "GPLv3"
readme = "README.md"
include = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "linux")'.dependencies]
bevy = { version = "0.16", features = ["wayland", "x11"] }
wayland-sys = "0.31"

[dependencies]
# Fixed Dependencies
bevy = "0.16"
bevy_egui = "0.35"

# Up To Date Dependencies
rayon = "1"
rstest = "0"
rand = "0"
float-lerp = "0"

[workspace]
resolver = "2"

# No optimisation for better debugging. Set to 1 for some optimisation
[profile.dev]
opt-level = 0

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
